test/parse/module/bad-memory-max-less-than-init.txt
;;; ERROR: 1
(module (memory 2 1))
(;; STDERR ;;;
out/test/parse/module/bad-memory-max-less-than-init.txt:2:10: error: max pages (1) must be >= initial pages (2)
(module (memory 2 1))
         ^^^^^^
;;; STDERR ;;)
